removed overflow-x hidden at the tablet break and higher - was causing issues with sticky nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -513,6 +513,9 @@ main .heading {
   * {
     scroll-behavior: smooth;
   }
+  html, body {
+    /* overflow-x: visible; */
+  }
   .container {
     width: 90%;
     margin: 0 auto;
